--- a/index.html
+++ b/index.html
@@ -17,8 +17,110 @@
                 <li><a href="">Login</a></li>
             </ul>
         </nav>
+        <section class="banner-section">
+            <div class="banner-top">
+                <h1>Brand New Group of Architects</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <div class="banner-img">
+                <img src="./images/banner.png" alt="">
+            </div>
+        </section>
     </header>
-    <main></main>
+    <main>
+        <section class="feature-container">
+            <div class="feature-img-content">
+                <img src="./images/team1.png" alt="">
+                <img src="./images/team2.png" alt="">
+                <img src="./images/team3.png" alt="">
+                <img src="./images/team4.png" alt="">
+            </div>
+            <div class="feature-text-content">
+                <h4><span class="quick-list">Quick list</span> <span class="of-our">of Our</span> <span class="feature">Features</span> </h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore Now</button>
+            </div>
+        </section>
+
+        <section class="team-container">
+            <div class="team-left">
+                <h2 class="team-title">Features you will </br>love & enjoy</h2>
+                <p class="team-des">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+                <div class="cart-content">
+                    <div class="card">
+                        <h4>Dexktop & Mobile Version</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card">
+                        <h4>Drag & Drop Builder</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card">
+                        <h4>Awesome Modern Design</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                    <div class="card">
+                        <h4>Super Easy to Edit</h4>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                    </div>
+                </div>
+            </div>
+            <div class="team-right">
+                <img src="./images/architect.png" alt="">
+                <div class="ralative-text">
+                    <h2>10+ Years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="fact-container">
+            <div class="fact-top">
+                <h2>Some Facts</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration.</p>
+            </div>
+            <div class="fact-box">
+                <div class="box-item">
+                    <img src="./images/./icons/ribon.png" alt="">
+                    <h2>54</h2>
+                    <h4>Award Winning</h4>
+                </div>
+                <div class="box-item">
+                    <img src="./images/./icons/projects.png" alt="">
+                    <h2>1458</h2>
+                    <h4>Project Finished</h4>
+                </div>
+                <div class="box-item">
+                    <img src="./images/./icons/customers.png" alt="">
+                    <h2>590</h2>
+                    <h4>Clients Worked</h4>
+                </div>
+                <div class="box-item">
+                    <img src="./images/./icons/email.png" alt="">
+                    <h2>22578</h2>
+                    <h4>Email Send</h4>
+                </div>
+            </div>
+        </section>
+
+        <section class="sponsor-container">
+            <div class="sponsor-top">
+                <h2>Our Sponsors</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-img">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
+            </div>
+        </section>
+
+    </main>
     <footer></footer>
 </body>
 </html>
